pkg/main/default/objects/User/fields/InviteDate__c.field-meta.xml
<CustomField>
    <fullName>InviteDate__c</fullName>
    <label>DocuSign Invitation Date</label>
    <type>Date</type>
</CustomField>