pkg/main/default/objects/User/fields/InviteId__c.field-meta.xml
<CustomField>
    <fullName>InviteId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Docusign Invite ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>