pkg/main/default/objects/User/fields/Provisioned__c.field-meta.xml
<CustomField>
	<fullName>Provisioned__c</fullName>
	<description>Date when the user was added to the account</description>
	<inlineHelpText>Date when the user was added to the account</inlineHelpText>
	<label>DocuSign Provisioned Date</label>
	<type>Date</type>
</CustomField>