pkg/main/default/objects/User/fields/Status__c.field-meta.xml
<CustomField>
	<fullName>Status__c</fullName>
	<label>Docusign Status</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>Inactive</fullName>
			</value>
			<value>
				<fullName>Pending</fullName>
			</value>
			<value>
				<fullName>Active</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>